@@ -1,3 +1,7 @@
+12 November 2007
+
+* (nicm) kill-session command.
+
 09 November 2007
 
 * (nicm) C-space is now "^ " not "^@".
@@ -198,4 +202,4 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.64 2007-11-09 17:09:34 nicm Exp $
+$Id: CHANGES,v 1.65 2007-11-12 14:21:40 nicm Exp $
